# llm-epi-docs-annotation

./: .gitignore  CLAUDE.md  README.md  config.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/coding-philosophy/: SKILL.md
.claude/skills/spec-driven-development/: SKILL.md
.claude/skills/spec-driven-development/assets/: plan-template.md  spec-template.md  tasks-template.md
.claude/skills/spec-driven-development/references/: ears.md  example.md
data/raw/: failures.csv  manifest.csv
docs/: plan.md  spec.md  tasks.md
src/epi_annotation/: _tasks.py  annotate.py  cli.py  config.py  extract.py  fingerprint.py  models.py  schema.py
src/epi_annotation/prompts/: system.md  system_v2.md  system_v3.md
tests/: test_annotate.py  test_config.py  test_extract.py  test_fingerprint.py  test_models.py  test_schema.py
