[project]
name = "epi-annotation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.0",
    "pydantic>=2",
    "pyyaml>=6",
    "python-dotenv>=1",
    "pymupdf>=1.24",
    "tenacity>=8",
    "rich>=13",
    "openai>=1",
    "anthropic>=0.25",
    "google-generativeai>=0.7",
]

[project.scripts]
epi-annotate = "epi_annotation.cli:main"
test = "epi_annotation._tasks:run_tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epi_annotation"]

[dependency-groups]
dev = [
    "pytest>=8",
]
